--- a/Backend/farmersmarkethub/src/main/resources/application.properties
+++ b/Backend/farmersmarkethub/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=farmersmarkethub
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=C##oracleuser
+spring.datasource.password=oracledb123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+server.port=8100
